/*
 * This file is part of Bisq.
 *
 * Bisq is free software: you can redistribute it and/or modify it
 * under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or (at
 * your option) any later version.
 *
 * Bisq is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public
 * License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with Bisq. If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package protocol;
option java_package = "bisq.protocol.protobuf";
option java_multiple_files = true;

import "offer.proto";

message ProtocolModel {
}
message ProtocolStore {
  map<string, ProtocolModel> protocolModelByOfferId = 1;
}

// BisqEasy
enum BisqEasyTradePhase {
  NEGOTIATION = 0;
  FIAT_TRANSFER = 1;
  BTC_TRANSFER = 2;
  COMPLETED = 3;
}

message BisqEasyTrade {
  offer.SwapOffer offer = 1;
  uint64 baseSideAmount = 2;
  uint64 quoteSideAmount = 3;
  double premium = 4;
}

message BisqEasyProtocolModel {
  BisqEasyTrade trade = 1;
  BisqEasyTradePhase phase = 2;
}

message BisqEasyProtocolModelStore {
  map<string, BisqEasyProtocolModel> protocolModelById = 1;
}